hphp/test/slow/lang/nontoplevel_class.php.expectf
Fatal error: Declarations are not supported outside global scope in %s on line 5
